Fixed previously mentioned clipping issue.

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -43,3 +43,7 @@ p {
 	display: block;
 	margin: 0 auto 10px;
 }
+
+.navbar {
+	display: block;
+}
